--- a/chat/index.html
+++ b/chat/index.html
@@ -1,1 +1,48 @@
-
+<!DOCTYPE html>
+<html lang="es">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Eco IA • Artificial intelligence</title>
+      <link rel="icon" href="https://zendtay-studio.neocities.org/eco.ia/icon.png" type="image/png">
+      <meta name="description" content="Explore the future with Eco AI, the intelligent platform designed to simplify your life.">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="styles.css">
+   </head>
+   <body>
+      <div class="container">
+         <header>
+            <div class="logo">
+               <img src="https://zendtay-studio.neocities.org/eco.ia/icon.png" alt="Eco IA">
+               <div>
+                  <h1>Eco IA</h1>
+                  <p>Inteligencia artificial</p>
+               </div>
+            </div>
+            <button class="theme-toggle" id="themeToggle">
+            <i class="material-icons">dark_mode</i>
+            </button>
+         </header>
+         <div class="chat-area" id="chatMessages">
+            <!-- Mensajes del chat se cargarán aquí -->
+         </div>
+         <footer>
+            <form class="input-area" id="chatForm">
+               <input type="text" id="userInput" placeholder="Message to Eco IA">
+               <button id="sendButton" type="submit">
+               <i class="material-icons">send</i>
+               </button>
+            </form>
+         </footer>
+         <p style="font-family: Arial, sans-serif; font-size: 14px; text-align: center; padding: 5px 20px 0px 20px;">Al utilizar Eco IA, usted acepta los 
+            <a href="https://zendtay-studio.github.io/eco.ia/terms" target="_blank" style="color: #007bff; text-decoration: none;">Términos</a> 
+            y la 
+            <a href="https://zendtay-studio.github.io/eco.ia/privacy" target="_blank" style="color: #007bff; text-decoration: none;">Política de privacidad</a>.
+         </p>
+      </div>
+      <script src="script.js"></script>
+   </body>
+</html>
