--- a/chat/index.html
+++ b/chat/index.html
@@ -16,7 +16,7 @@
       <div class="container">
          <header>
             <div class="logo">
-               <img src="chat/icon_eco_ia.png" alt="Eco IA">
+               <img src="icon_eco_ia.png" alt="Eco IA">
                <div>
                   <h1>Eco IA</h1>
                   <p>Inteligencia artificial</p>
