--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Eco IA • Terms and Conditions</title>
+      <title>Terms of Eco IA</title>
+      <meta name="description" content="Conditions governing the use of the artificial intelligence, ensuring security, privacy, and reliable service.">
       <link rel="icon" href="https://zendtay-studio.neocities.org/eco.ia/icon.png" type="image/png">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,7 +129,36 @@
          .scroll-down {
          transform: rotate(0deg);
          }
+         .user-count3 {
+     	align-items: center;
+         color: var(--border-dark);
+         font-size: 22px;
+         font-family: 'Roboto', sans-serif;
+         }
+         header {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         padding: 4px;
+         background-color: var(--background-light);
+         border-bottom: 1px solid var(--border-light);
+        .logo {
+         border-radius: 10px;
+         display: flex;
+         }
+         .logo img {
+     	width: 48px;
+         height: 48px;
+         margin: 10px;
+         border-radius: 10px;
+         }
       </style>
+      <header>
+            <div class="logo">
+               <img src="img/icon_eco_ia.png" alt="Eco IA">
+               <div>
+               	<p class="user-count3"><strong>Eco IA</strong></p>
+         </header>
       <div id="linear1">
       <div class="scroll-view">
       <div class="information">
@@ -181,7 +211,9 @@
             <p class="user-text2">21 de diciembre del 2024</p>
          </div>
       </div>
-      <p class="copyright">ZendTay Studio. Todos los derechos reservados.</p>
+      <br>
+      <p class="copyright">Todos los derechos reservados</p>
+      <p class="copyright">ZendTay Studio</p>
       <div class="fab" id="fab" onclick="scrollToPosition()">
       <i class="material-icons" id="fab-icon">arrow_downward</i>
       <script>
