--- a/chat/index.html
+++ b/chat/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Eco IA • Artificial intelligence</title>
       <link rel="icon" href="https://zendtay-studio.neocities.org/eco.ia/icon.png" type="image/png">
-      <meta name="description" content="Explore the future with Eco AI, the intelligent platform designed to simplify your life.">
+      <meta name="description" content="Eco IA is an artificial intelligence designed to generate text securely and reliably. Its main goal is to protect user privacy, as it does not track, store, or share the conversations generated.">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
