--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Eco IA • Artificial intelligence</title>
+      <title>Eco IA</title>
       <link rel="icon" href="https://zendtay-studio.neocities.org/eco.ia/icon.png" type="image/png">
       <meta name="description" content="Eco IA is an artificial intelligence designed to generate text securely and reliably. Its main goal is to protect user privacy, as it does not track, store, or share the conversations generated.">
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -114,7 +114,7 @@
          font-weight: 700;
          }
          .user-count3 {
-     	align-items: center;
+         align-items: center;
          color: var(--border-dark);
          font-size: 22px;
          font-family: 'Roboto', sans-serif;
@@ -126,12 +126,12 @@
          padding: 4px;
          background-color: var(--background-light);
          border-bottom: 1px solid var(--border-light);
-        .logo {
+         .logo {
          border-radius: 10px;
          display: flex;
          }
          .logo img {
-     	width: 48px;
+         width: 48px;
          height: 48px;
          margin: 10px;
          border-radius: 10px;
@@ -145,39 +145,41 @@
          }
       </style>
    <body>
-         <header>
-            <div class="logo">
-               <img src="img/icon_eco_ia.png" alt="Eco IA">
-               <div>
-               	<p class="user-count3"><strong>ZendTay Studio</strong></p>
-         </header>
+      <header>
+         <div class="logo">
+         <img src="img/icon_eco_ia.png" alt="Eco IA">
+         <div>
+         <p class="user-count3"><strong>ZendTay Studio</strong></p>
+      </header>
       <div id="linear1">
       <div class="scroll-view">
-      	<div class="information">
-      	<p class="user-count1"><strong>Eco IA</strong></p>
-         <div class="slider">
-            <div class="slides">
-               <img src="img/phone_1.png" alt="Eco IA" class="app-logo3">
-               <img src="img/phone_2.png" alt="Eco IA" class="app-logo3">
+         <div class="information">
+            <p class="user-count1"><strong>Eco IA</strong></p>
+            <div class="slider">
+               <div class="slides">
+                  <img src="img/phone_1.png" alt="Eco IA" class="app-logo3">
+                  <img src="img/phone_2.png" alt="Eco IA" class="app-logo3">
+               </div>
             </div>
-         </div>
-         <br>
-         <p class="user-count2"><strong>Eco IA es una inteligencia artificial diseñada para generar texto de manera segura y confiable. Su principal objetivo es proteger la privacidad de los usuarios, ya que no rastrea, almacena ni comparte las conversaciones generadas.</strong></p>
+            <br>
+            <p class="user-count2"><strong>Eco IA es una inteligencia artificial diseñada para generar texto de manera segura y confiable. Su principal objetivo es proteger la privacidad de los usuarios, ya que no rastrea, almacena ni comparte las conversaciones generadas.</strong></p>
          </div>
          <a href="https://zendtay-studio.github.io./eco.ia/chat/" class="support-button"><strong>Hablar con Eco IA</strong></a>
          <a href="https://play.google.com/store/apps/details?id=com.eco.ia.zty" target="_blank">
          <img src="img/google_play_store.png" 
             alt="Eco IA" 
             class="play-store">
-      	</br>
+         </br>
          </a>
          <p style="font-family: Arial, sans-serif; font-size: 14px; text-align: center; padding: 5px 20px 0px 20px;">Al utilizar Eco IA, usted acepta los 
             <a href="https://zendtay-studio.github.io/eco.ia/terms" target="_blank" style="color: #007bff; text-decoration: none;">Términos</a> 
             y la 
             <a href="https://zendtay-studio.github.io/eco.ia/privacy" target="_blank" style="color: #007bff; text-decoration: none;">Política de privacidad</a>.
          </p>
-         <center><p>ZendTay Studio</p><center>
-     </div>
+         <center>
+         <p>ZendTay Studio</p>
+         <center>
+      </div>
       <script>
          let index = 0;
          const slides = document.querySelector('.slides');
