--- a/privacy.html
+++ b/privacy.html
@@ -140,8 +140,8 @@
          justify-content: space-between;
          align-items: center;
          padding: 4px;
-         background-color: var(--background-light);
-         border-bottom: 1px solid var(--border-light);
+         background-color: var(--message-light);
+         border-bottom: 1px #000000;
          .logo {
          border-radius: 10px;
          display: flex;
