--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          border-radius: 10px;
          }
          .information {
-         margin-top: 30px;
+         margin: auto;
          padding: 30px;
          background: var(--message-light);
          border-radius: 30px;
@@ -112,6 +112,7 @@
          font-size: 15px;
          font-family: 'Roboto', sans-serif;
          font-weight: 700;
+         margin: auto;
          }
          .user-count3 {
          align-items: center;
@@ -120,12 +121,13 @@
          font-family: 'Roboto', sans-serif;
          }
          header {
+         margin: 0px 0px 30px 0px;
          display: flex;
          justify-content: space-between;
          align-items: center;
          padding: 4px;
-         background-color: var(--background-light);
-         border-bottom: 1px solid var(--border-light);
+         background-color: var(--message-light);
+         border-bottom: 1px #000000;
          .logo {
          border-radius: 10px;
          display: flex;
